--- a/src/css/header.css
+++ b/src/css/header.css
@@ -45,13 +45,15 @@ header .nav { width: 100%; height: 34px; position: relative; }
 
 header .nav a { line-height: 34px; font-size: 14px; color: #333333; }
 
-header .nav .hnav { float: left; margin-left: 250px; width: 850px; }
+header .nav .hnav { float: left; margin-left: 250px; width: 850px; position: relative; }
+
+header .nav .hnav i { display: block; width: 19px; height: 12px; background: url("../img/hot.gif"); position: absolute; left: 248px; }
 
 header .nav .hnav a { margin: 0 20px; }
 
 header .nav > a { margin-left: 40px; display: block; height: 34px; width: 180px; background: #382f6b; text-align: center; color: #fff; position: absolute; }
 
-header .nav .all { display: none; z-index: 100000; }
+header .nav .all { display: none; z-index: 10; }
 
 header .nav .all dl { width: 180px; height: 63px; }
 
