--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,8 +1,38 @@
 @import url('header.css');
 @import url('footer.css');
 @import url('slideshow.css');
+@import url("base.css");
 .box {
   width: 100%;
   height: 400px;
   margin-top: 34px;
+}
+.fu{
+	width:100%;
+	height: 50px;
+	background:url('/ajax/project/src/img/min_logo.png') no-repeat;
+	background-color:#fff;
+	box-shadow: 0 0 3px #ccc;
+	position: fixed;
+	top:0;
+	z-index:100000000;
+	display: none;
+	.bor {
+            width: 600px;
+            height: 35px;
+            border: 2px solid #51458c;
+            float: left;
+            margin-left: 300px;
+            margin-top: 7px;
+          }
+          .bot {
+            cursor: pointer;
+            background: #51458c;
+            width: 71px;
+            height: 35px;
+            border: none;
+            float: left;
+            color: #fff;
+            margin-top: 7px;
+          }
 }
