--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -11,7 +11,7 @@ header {
     left: 40px;
     width: 30px;
     height: 70px;
-    background: url(../img/logo.png);
+    background: url('../img/logo.png');
   }
   .right {
     float: right;
