--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,6 @@
 @import url("header.css");
 @import url("footer.css");
-@import url("carousel.css");
+@import url("slideshow.css");
 @import url("base.css");
 * { margin: auto; }
 
@@ -16,7 +16,15 @@
 
 section { width: 100%; height: 3330px; background: #fff; }
 
-section .contant { width: 1200px; }
+section .contant { width: 1200px; margin-top: 30px; }
+
+section .contant .car { display: block; width: 50px; height: 50px; border-radius: 25px; background: #000; position: fixed; right: 0px; top: 200px; }
+
+section .contant .car:hover { background: red; }
+
+section .contant .car img { width: 25px; margin-top: 10px; }
+
+section .contant .car .count { display: block; width: 25px; height: 25px; background: #E93B39; border-radius: 12.5px; position: relative; left: 12px; top: -50px; text-align: center; line-height: 25px; color: #fff; font-size: 14px; }
 
 section .contant .main1 { width: 1200px; height: 480px; }
 
