--- a/src/sass/car.scss
+++ b/src/sass/car.scss
@@ -23,13 +23,12 @@ header {
   }
 }
 section {
-  height: 750px;
   width: 100%;
   background: #fdf8f4;
   .content {
     width: 1200px;
-    height: 750px;
     overflow: hidden;
+    padding-bottom: 55px;
     .car {
       width: 986px;
       margin-top: 60px;
@@ -46,7 +45,7 @@ section {
         }
         span {
           font-size: 13px;
-          color:#494949;
+          color: #494949;
         }
         .goodname {
           margin-left: 171px;
@@ -64,10 +63,168 @@ section {
           margin-left: 112px;
         }
       }
-      ul {
-        width: 986px;
-        background-color: #fdf0ef;
-        border-bottom: 1px solid #fff;
+      .list {
+        
+       
+          ul{
+              width: 986px;
+              height: 80px;
+              background-color: #fdf0ef;
+              border-bottom: 1px solid #fff;
+            li{
+              float: left;
+              font-size: 13px;
+              .gcheck {
+                  margin: 32px 10px;
+                }
+                .pic {
+                  float: left;
+                  margin-left: 20px;
+                  width: 70px;
+                  height: 70px;
+                  margin-top: 3px;
+                  img{
+                    width: 70px;
+                    height: 70px;
+                  }
+                }
+                .txt {
+                  float: left;
+                  width: 300px;
+                }
+                .gprice {
+                  width: 90px;
+                  margin-left: 14px;
+                  color:red;
+                  font-size: 16px;
+                }
+                .gcount {
+                  width: 50px;
+                  text-align: center;
+                  height: 22px;
+                }
+                .a{
+                  float:left;
+                  margin-top: 10px;
+                }
+                .cut{
+                    width: 22px;
+                    height: 22px;
+                    display: inline-block;
+                    background:#DDDDDD;
+                    font-weight: bold;
+                    text-align: center;
+                    margin-left: 33px;
+                    cursor: pointer;
+                    &:hover{
+                      background:#E93B39;
+                      color:#fff;
+                    }
+                  }
+                .add{
+                    width: 22px;
+                    height: 22px;
+                    display: inline-block;
+                    background:#DDDDDD;
+                    font-weight: bold;
+                    text-align: center;
+                    cursor: pointer;
+                    &:hover{
+                      background:#E93B39;
+                      color:#fff;
+                    }
+                }
+                .gsum {
+                  width: 100px;
+                  margin-left: 57px;
+                  color: red;
+                  font-size: 16px;
+                }
+                .gcao {
+                  width: 100px;
+                  margin-left: 55px;
+                  a:hover{
+                    color:red;
+                  }
+                }
+                p {
+                  text-align: center;
+                  margin-top: 10px;
+                  a {
+                    color: #494949;
+                  }
+          
+        }
+      }
+    }
+            }
+          }
+          
+    .b {
+      width: 986px;
+      height: 187px;
+      background: #fff;
+      margin-top: 20px;
+      overflow: hidden;
+      .cut {
+        position: relative;
+        margin-top: 23px;
+        margin-left: 87px;
+        a {
+          color: #494949;
+          font-size: 14px;
+          &:hover{
+             color: red;
+          }
+          .tu {
+            display: block;
+            width: 20px;
+            height: 20px;
+            background: url("../img/lajitong2.png");
+            position: absolute;
+            left: -26px;
+            top: 2px;
+          }
+        }
+      }
+      .total {
+        font-size: 14px;
+        color: #494949;
+        margin-left: 64px;
+         margin-top: 18px;
+        .totalprice {
+          font-size: 28px;
+          color: red;
+        }
+      }
+      .ti{
+        font-size: 16px;
+        color: #fff;
+        margin-left: 64px;
+        width: 142px;
+        height: 42px;
+        background:#E93B39;
+        border-radius:5px;
+        text-align: center;
+        line-height: 42px;
+        margin-top: 20px;
+        cursor:pointer;
+      }
+      .shouye{
+        margin-left: 64px;
+        width: 142px;
+        height: 42px;
+        border-radius:5px;
+        border:1px solid #E93B39; 
+        text-align: center;
+        line-height: 42px;
+        position: relative;
+        top:-42px;left: 150px;
+        cursor:pointer;
+        a{
+          font-size: 16px;
+          color: #E93B39;
+        }
       }
     }
   }
