--- a/src/sass/detail.scss
+++ b/src/sass/detail.scss
@@ -13,6 +13,51 @@ section{
 	overflow:hidden;
 	.content{
 		width:1200px;
+		.tips{
+		width:200px;
+		heigth:30px;
+		background:#000;
+		text-align: center;
+		line-height:50px; 
+		border-radius:9px;
+		color:#fff;
+		position: fixed;
+		left:1135px;
+		top:200px;
+		display:none;
+		}
+		.car{
+	      display: block;
+	      width: 50px;
+	      height: 50px;
+	      border-radius:25px;
+	      background:#000;
+	      // overflow: hidden;
+	      position: fixed;
+	      right: 0px;
+	      top: 200px;
+	      z-index:1000;
+	      &:hover{
+	        background:red;
+	      }
+			img{
+				width: 25px;
+				margin-top: 10px;
+			}
+			.count{
+				display: block;
+				width: 25px;
+				height: 25px;
+				background:#E93B39;
+				border-radius:12.5px;
+				position: relative;
+				left: 12px;top: -50px;
+				text-align: center;
+				line-height: 25px;
+				color:#fff;
+				font-size: 14px;
+			}
+		}
 		.p1{
 			margin-top: 35px;
 			a{
@@ -126,6 +171,9 @@ section{
 							margin-left: 45px;
 							font-size: 26px;
 							color:red;
+							&:before{
+								content:'￥';
+							}
 						}
 						&.jb{
 							margin-left: 40px;
@@ -168,9 +216,13 @@ section{
 						width: 300px;
 						float:left;
 
-						span{
+						.gc{
 							color:#666666;
 							font-size: 14px;
+							margin-left: -152px;
+							margin-top: 30px;
+							position: relative;
+							top: 8px;
 						}
 						.cut,.add{
 							width: 22px;
@@ -179,9 +231,20 @@ section{
 							background:#DDDDDD;
 							font-weight: bold;
 							text-align: center;
+							cursor: pointer;
+							 &:hover{
+				                background:#E93B39;
+				                color:#fff;
+				              }
 						}
+						.cut{margin-left: 82px;}
+						 .a{
+				            float:left;
+				            margin-top: 10px;
+				          }
 						input{
-							width: 20px;
+							width: 35px;
+							height: 22px;
 							text-align: center;
 							// border:none ;
 						}
@@ -191,7 +254,7 @@ section{
 							height: 40px;
 							background-color:#E93A38;
 							color:#fff;
-							margin-top: 20px;
+							margin-top: 30px;
 							text-align: center;
 							line-height: 40px;
 							border-radius: 20px;
@@ -335,3 +398,4 @@ section{
 	}
 }
 .active{border:1.4px dashed red;}
+.u-flyer {display: block;width: 60px;height: 60px;border-radius: 50px;position: fixed;z-index: 9999;}
