--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -1,4 +1,3 @@
-@import url('base.css');
 header {
   width: 100%;
   height: 162px;
@@ -29,18 +28,10 @@ header {
           margin-left: 22px;
         }
         &:hover {
-          color: #000;
+          color: red;
         }
       }
-      i {
-        display: block;
-        background: url('../img/car.png');
-        position: absolute;
-        left: 456px;
-        top: 5px;
-        width: 16px;
-        height: 13px;
-      }
+      
     }
     .center {
       width: 100%;
@@ -57,7 +48,7 @@ header {
           display: block;
           height: 140px;
           width: 100px;
-          background: url('../img/secoo_logo.png') no-repeat;
+          background: url("../img/secoo_logo.png") no-repeat;
         }
       }
       .search {
@@ -111,7 +102,7 @@ header {
     .er {
       width: 96px;
       height: 140px;
-      background: url('../img/apps_bg.gif');
+      background: url("../img/apps_bg.gif");
       position: absolute;
       left: 1130px;
       top: 20px;
@@ -131,15 +122,13 @@ header {
       margin-left: 250px;
       width: 850px;
       position: relative;
-      i{
+      i {
         display: block;
         width: 19px;
         height: 12px;
-        background:url('../img/hot.gif');
+        background: url("../img/hot.gif");
         position: absolute;
         left: 248px;
-        
-
       }
       a {
         margin: 0 20px;
@@ -155,10 +144,16 @@ header {
       color: #fff;
       position: absolute;
     }
+    .hanv {
+      a {
+        &:hover {
+          color: #7b05f9;
+        }
+      }
+    }
     .all {
       display: none;
       z-index: 10;
-
       dl {
         width: 180px;
         height: 63px;
@@ -171,6 +166,13 @@ header {
         }
         &:nth-child(even) {
           background: #382f6b;
+        }
+        &:hover {
+          background: #fff;
+          a {
+            color: #333333;
+            font-size: 12px;
+          }
         }
       }
     }
@@ -188,6 +190,6 @@ header {
     }
   }
 }
-header .nav dt,header .nav dd {
+header .nav dt, header .nav dd {
   margin-left: 0px;
 }
